--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-serlina",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "Serlina for Egg",
   "eggPlugin": {
     "name": "serlina"
@@ -11,7 +11,7 @@
     "egg-plugin"
   ],
   "dependencies": {
-    "serlina": "0.0.8"
+    "serlina": "^0.0.8"
   },
   "devDependencies": {
     "autod": "^3.0.0",
