--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "egg-bin": "^4.3.0",
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.13.0",
+    "serlina": "^2.0.0",
     "eslint": "^4.11.0",
     "eslint-config-egg": "^5.1.0",
     "react": "^16.4.2",
